test/visibility/private/config/variables/accessesOther.good
accessesOther.chpl:1: In module 'OuterModule':
accessesOther.chpl:7: error: cannot access 'foo' as it is private to 'M1'
